fix formating and uncomment logger and sl4j